問い合わせ項目非表示

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </ul>
         </li>
         -->
-        <li><a class="nav-link scrollto" href="#contact">お問い合わせ</a></li>
+        <!--<li><a class="nav-link scrollto" href="#contact">お問い合わせ</a></li>-->
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav><!-- .navbar -->
@@ -79,7 +79,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>GUWON株式会社</h1>
-      <h2>私たちは長期的な資産運用を目的とした不動産賃貸事業を行う企業です</h2>
+      <h2>私たちは長期的な資産運用を目的とした不動産賃貸事業を行う会社です</h2>
       <!--<a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>-->
     </div>
   </section><!-- End Hero -->
@@ -101,8 +101,8 @@
               <tr><th>資本金</th><td align="left">500万円</td></tr>
               <tr><th>代表者</th><td align="left">代表取締役　荒川　光</td></tr>
               <tr><th>本社</th><td align="left">〒101-0054 千葉県市川市国分4-2-16<br></tr>
-              <tr><th>URL</th><td align="left">未定</td></tr>
-              <tr><th>MAIL</th><td align="left">未定</td></tr>
+              <tr><th>URL</th><td align="left"> <a href="https://www.guwon.co.jp">www.guwon.co.jp</a></td></tr>
+              <tr><th>MAIL</th><td align="left"><a href="mailto:info@guwon.co.jp">info@guwon.co.jp</a></td></tr>
               <tr><th>事業内容</th><td align="left">住宅の賃貸及び関連業務</td></tr>
             </tbody>
           </table>
@@ -316,7 +316,7 @@
     </section><!-- End My Resume Section -->
 
     <!-- ======= Contact Me Section ======= -->
-    <section id="contact" class="contact">
+    <!--<section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
@@ -344,6 +344,7 @@
         </div>
       </div>
     </section>
+    -->
     <!-- End Contact Me Section -->
 
   </main><!-- End #main -->
@@ -363,7 +364,7 @@
       </div>
       -->
       <div class="copyright">
-        &copy; 2024 <strong><span>GUWON</span></strong>. All Rights Reserved
+        &copy; 2024 <strong><span>GUWON Co., Ltd</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
