--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
           <h2>会社概要</h2>
         </div>
         <div class="info-box">
-          <table class="aboutTable">
+          <table width="100%">
             <tbody>
-              <tr><th>会社名</br></th><td align="left">GUWON株式会社</td></tr>
-              <tr><th>設立</th><td align="left">2024年4月</td></tr>
-              <tr><th>資本金</th><td align="left">500万円</td></tr>
-              <tr><th>代表者</th><td align="left">代表取締役　荒川　光</td></tr>
-              <tr><th>本社</th><td align="left">〒101-0054 千葉県市川市国分4-2-16<br></tr>
-              <tr><th>URL</th><td align="left"> <a href="https://www.guwon.co.jp">www.guwon.co.jp</a></td></tr>
-              <tr><th>MAIL</th><td align="left"><a href="mailto:info@guwon.co.jp">info@guwon.co.jp</a></td></tr>
-              <tr><th>事業内容</th><td align="left">住宅の賃貸及び関連業務</td></tr>
+              <tr height="50px"><th width="30%">会社名</th><td align="left" width="70%">GUWON株式会社</td></tr>
+              <tr height="50px"><th>設立</th><td align="left">2024年4月</td></tr>
+              <tr height="50px"><th>資本金</th><td align="left">5,000,000円</td></tr>
+              <tr height="50px"><th>代表取締役</th><td align="left">荒川　光</td></tr>
+              <tr height="50px"><th>本社</th><td align="left">〒272-0834</br> 千葉県市川市国分4-2-16<br></tr>
+              <tr height="50px"><th>URL</th><td align="left"> <a href="https://www.guwon.co.jp">www.guwon.co.jp</a></td></tr>
+              <tr height="50px"><th>MAIL</th><td align="left"><a href="mailto:info@guwon.co.jp">info@guwon.co.jp</a></td></tr>
+              <tr height="50px"><th>事業内容</th><td align="left">住宅の賃貸及び関連業務</td></tr>
             </tbody>
           </table>
         </div>
